# rixel

./: Cargo.toml
assets/layouts/: bigCorners.json  bigMaze.json  bigSafeSearch.json  bigSearch.json  boxSearch.json  capsuleClassic.json  contestClassic.json  contoursMaze.json  greedySearch.json  mediumClassic.json  mediumCorners.json  mediumDottedMaze.json  mediumMaze.json  mediumSafeSearch.json  mediumScaryMaze.json  mediumSearch.json  minimaxClassic.json  oddSearch.json  openClassic.json  openMaze.json  openSearch.json  originalClassic.json  powerClassic.json  smallClassic.json  smallMaze.json  smallSafeSearch.json  smallSearch.json  test.json  testClassic.json  testMaze.json  testSearch.json  tinyCorners.json  tinyMaze.json  tinySafeSearch.json  tinySearch.json  trappedClassic.json  trickyClassic.json  trickySearch.json
assets/shaders/: custom_material.frag  custom_material.vert
examples/: ui.rs
src/: cell.rs  grid.rs  main.rs  main_copy.rs  menu.rs  movement.rs
