[package]
name = "rixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
wgpu = "0.14.2"
